@@ -1,5 +1,8 @@
 shady-KISS-skin History
 -------------------------------------------
+2016-01-31:
+- Fixed area of {timerstart} - {timerstop} in displaymenutimers
+
 2016-01-21:
 - Fixed conditions for neutrinoepg
 - Added starttimes for neutrinoepg
